tests/compile_fail/attr_vis.stderr
error[E0364]: `PubCrate` is private, and cannot be re-exported
  --> tests/compile_fail/attr_vis.rs:23:9
   |
23 | pub use error::PubCrate as _;
   |         ^^^^^^^^^^^^^^^^^^^^
   |
note: consider marking `PubCrate` as `pub` in the imported module
  --> tests/compile_fail/attr_vis.rs:23:9
   |
23 | pub use error::PubCrate as _;
   |         ^^^^^^^^^^^^^^^^^^^^

error[E0603]: struct `Private` is private
  --> tests/compile_fail/attr_vis.rs:33:12
   |
33 | use error::Private as _;
   |            ^^^^^^^ private struct
   |
note: the struct `Private` is defined here
  --> tests/compile_fail/attr_vis.rs:7:14
   |
7  |     #[derive(thisctx::WithContext)]
   |              ^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `thisctx::WithContext` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: tuple struct constructor `Private` is private
  --> tests/compile_fail/attr_vis.rs:39:20
   |
16 |         Private(i32),
   |                 --- a constructor is private if any of the fields is private
...
39 |     let _ = error::Private(0);
   |                    ^^^^^^^ private tuple struct constructor
   |
note: the tuple struct constructor `Private` is defined here
  --> tests/compile_fail/attr_vis.rs:7:14
   |
7  |     #[derive(thisctx::WithContext)]
   |              ^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `thisctx::WithContext` (in Nightly builds, run with -Z macro-backtrace for more info)
